Fixed #4028 - SplitButton: menu icon not visible in large size

--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -2352,8 +2352,15 @@
   font-size: 1.25rem;
   padding: 0.625rem 0.9375rem;
 }
+.p-splitbutton.p-button-lg > .p-button.p-button-icon-only {
+  width: auto;
+}
 .p-splitbutton.p-button-lg > .p-button .p-button-icon {
   font-size: 1.25rem;
+}
+.p-splitbutton.p-button-lg > .p-button .p-icon {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .p-splitbutton.p-button-secondary.p-button-outlined > .p-button {
@@ -5952,6 +5959,13 @@
 }
 
 /* Vendor extensions to the designer enhanced bootstrap compatibility */
+.p-breadcrumb .p-breadcrumb-chevron {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.p-breadcrumb .p-breadcrumb-chevron:before {
+  content: "/";
+}
+
 .fc.fc-theme-standard .fc-highlight {
   background: #e7d8ef;
 }
